[package]
name = "libyee"
version = "0.0.1"
authors = ["sgbasaraner <sarpbasaraner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

description = "A low level library for performing operations on a Xiaomi Yeelight."
repository = "https://github.com/sgbasaraner/yeelight-cli.git"
keywords = ["yeelight", "library", "xiaomi"]
license = "MIT"

[dependencies]
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
enum-iterator = "0.7.0"